--- a/AdminModule/Views/UserAccess/UserPropertiesDialogView.xaml
+++ b/AdminModule/Views/UserAccess/UserPropertiesDialogView.xaml
@@ -10,6 +10,8 @@
              xmlns:viewModels="clr-namespace:AdminModule.ViewModels"
              xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
              xmlns:model="clr-namespace:AdminModule.Model"
+             xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
+             xmlns:sharedMisc="clr-namespace:Shared.Patient.Misc;assembly=Shared.Patient"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
@@ -59,10 +61,11 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Border Grid.Column="0"
                 Grid.Row="0"
-                Grid.RowSpan="4"
+                Grid.RowSpan="5"
                 BorderBrush="Black"
                 BorderThickness="1"
                 Margin="2"
@@ -203,7 +206,40 @@
                 </StackPanel>
             </ToggleButton>
         </StackPanel>
-        <Button Grid.Row="4"
+        <TextBlock Grid.Row="4"
+                   Grid.Column="1"
+                   Text="СНИЛС" />
+        <StackPanel Grid.Row="4"
+                    Grid.Column="2"
+                    Orientation="Horizontal">
+            <TextBox Text="{Binding Snils, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                             Width="140"
+                             MaxLength="14"
+                             Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
+                <i:Interaction.Behaviors>
+                    <behaviors:TextBoxInputHelperBehavior>
+                        <behaviors:TextBoxInputHelperBehavior.InputHelper>
+                            <sharedMisc:SnilsInputHelper />
+                        </behaviors:TextBoxInputHelperBehavior.InputHelper>
+                    </behaviors:TextBoxInputHelperBehavior>
+                </i:Interaction.Behaviors>
+            </TextBox>
+            <TextBlock Text="ЕНП" />
+            <TextBox Text="{Binding MedNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                             Width="140"
+                             MaxLength="16"
+                             Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
+                <i:Interaction.Behaviors>
+                    <behaviors:TextBoxInputHelperBehavior>
+                        <behaviors:TextBoxInputHelperBehavior.InputHelper>
+                            <misc:DigitsInputHelper MaxDigits="{x:Static data:Person.FullMedNumberLength}" />
+                        </behaviors:TextBoxInputHelperBehavior.InputHelper>
+                    </behaviors:TextBoxInputHelperBehavior>
+                </i:Interaction.Behaviors>
+            </TextBox>
+
+        </StackPanel>
+        <Button Grid.Row="5"
                 Grid.Column="0"
                 Grid.ColumnSpan="4"
                 Margin="5"
