--- a/PatientInfoModule/Views/Documents/PersonDocumentsView.xaml
+++ b/PatientInfoModule/Views/Documents/PersonDocumentsView.xaml
@@ -57,29 +57,16 @@
                             <MouseBinding MouseAction="LeftDoubleClick" 
                                           Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"/>
                         </Grid.InputBindings>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" MaxWidth="140" MinWidth="140" />
-                        </Grid.ColumnDefinitions>
-                        <CheckBox Grid.Row="0" Grid.Column="0" Margin="2"
-                                  IsChecked="{Binding Path=ThumbnailChecked}" />
-                        <DockPanel Grid.Row="0" Grid.Column="1" Grid.RowSpan="3">
-                            <Image Margin="2" Source="{Binding Path=ThumbnailImage}" Stretch="Uniform" Height="50" Width="40" VerticalAlignment="Top">
-
-                            </Image>
+                        <DockPanel LastChildFill="True" Margin="5,0,10,0">
+                            <CheckBox DockPanel.Dock="Left" Margin="2" VerticalAlignment="Top" IsChecked="{Binding Path=ThumbnailChecked}" />
+                            <Image DockPanel.Dock="Left" Margin="0,2" Source="{Binding Path=ThumbnailImage}" 
+                                   Stretch="Uniform" Height="50" Width="40" VerticalAlignment="Top"/>
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Margin="2,2,2,0" Text="{Binding Path=DocumentType, Mode=TwoWay}" FontWeight="Bold" />
+                                <TextBlock Margin="2,0" Text="{Binding Path=DocumentDate, StringFormat=dd-MM-yyyy, Mode=TwoWay}" FontStyle="Italic" Foreground="#FFB0B0B3"/>
+                                <TextBlock Margin="2,0" Text="{Binding Path=Comment, Mode=TwoWay}" FontStyle="Italic" Foreground="#FFB0B0B3"/>
+                            </StackPanel>
                         </DockPanel>
-                        <TextBlock Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Margin="2,0,0,0" 
-                                  Text="{Binding Path=DocumentType, Mode=TwoWay}" FontWeight="Bold" />
-                        <TextBlock Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Margin="2,0,0,0" 
-                                  Text="{Binding Path=DocumentDate, StringFormat=dd-MM-yyyy, Mode=TwoWay}" FontStyle="Italic" Foreground="#FFB0B0B3"/>
-                        <TextBlock Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Margin="2,0,0,0" 
-                                  Text="{Binding Path=Comment, Mode=TwoWay}" FontStyle="Italic" Foreground="#FFB0B0B3"/>
                     </Grid>
                 </DataTemplate>
             </ListView.Resources>
