--- a/CommissionsModule/Views/CommissionsListView.xaml
+++ b/CommissionsModule/Views/CommissionsListView.xaml
@@ -26,6 +26,7 @@
                           SelectedValuePath="Value" 
                           DisplayMemberPath="Field" />
             <DatePicker DockPanel.Dock="Top" SelectedDate="{Binding FilterDate}" Margin="0,2"
+                        HorizontalAlignment="Stretch"
                         Visibility="{Binding ShowDateFilter, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
             <CheckBox DockPanel.Dock="Top" 
                       Content="Мои комиссии" Margin="0,2" IsChecked="{Binding OnlyMyCommissions}"/>            
@@ -36,7 +37,7 @@
                  SelectedItem="{Binding SelectedCommission}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Border Background="{Binding StatusColor}">
+                    <Border Background="{Binding StatusColor}" Margin="0">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
@@ -48,15 +49,17 @@
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             
-                            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Source="{Binding StatusImage}" />
+                            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="3"
+                                Source="{Binding IsCompleted, Converter={x:Static converters:CommissionStatusToImageConverter.Instance}}"
+                                Width="40" Height="40" Stretch="Fill" Margin="0,0,2,0"/>
                             <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
-                                <TextBlock Text="{Binding PatientFIO}" Margin="0,0,5,0"/>
-                                <TextBlock Text="{Binding BirthDate}"/>
+                                <TextBlock Text="{Binding PatientFIO}" Margin="0,0,5,0" FontWeight="Medium"/>
+                                <TextBlock Text="{Binding BirthDate}" Margin="0" Foreground="Gray"/>
                             </StackPanel>
-                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Talon}"/>
+                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Talon}" Margin="0" FontStyle="Italic"/>
                             <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
-                                <TextBlock Text="{Binding MKB}" Margin="0,0,5,0"/>
-                                <TextBlock Text="{Binding IncomeDateTime}" />
+                                <TextBlock Text="{Binding MKB}" Margin="0,0,5,0" FontStyle="Italic"/>
+                                <TextBlock Text="{Binding IncomeDateTime}" Margin="0" FontStyle="Italic"/>
                             </StackPanel>                            
                         </Grid>
                     </Border>
