--- a/Shared/Shared.DataTemplates/Core.Data.xaml
+++ b/Shared/Shared.DataTemplates/Core.Data.xaml
@@ -14,8 +14,13 @@
                                           To="{x:Static Brushes.Gray}" />
             </converters:Converter>
         </HierarchicalDataTemplate.Resources>
-            <TextBlock Text="{Binding Name}" 
+        <TextBlock Text="{Binding Name}" 
                        Foreground="{Binding Assignable, Converter={StaticResource AssignableToForegroundConverter}}"/>
     </HierarchicalDataTemplate>
-
+    <!--Decision-->
+    <HierarchicalDataTemplate DataType="{x:Type data:Decision}"
+                              x:Key="DecisionsTree"
+                              ItemsSource="{Binding Decisions1}">
+        <TextBlock Text="{Binding Name}"/>
+    </HierarchicalDataTemplate>
 </ResourceDictionary>
