Closes #175 - width of names fields
Closes #176 - notification mediator is activated now if validation for patient info failed
Closed #177 - required fields on patient info now have red asterisk sign

--- a/Core.Wpf/Themes/Generic.xaml
+++ b/Core.Wpf/Themes/Generic.xaml
@@ -422,10 +422,10 @@
                                              Duration="{StaticResource AnimationDuration}"/>
                             <ColorAnimation Storyboard.TargetProperty="Background.Color"
                                             To="Yellow"
-                                            Duration="0:0:1.5"
+                                            Duration="0:0:4"
                                             AutoReverse="True">
                                 <ColorAnimation.EasingFunction>
-                                    <ElasticEase EasingMode="EaseIn" />
+                                    <BounceEase EasingMode="EaseInOut" />
                                 </ColorAnimation.EasingFunction>
                             </ColorAnimation>
                         </Storyboard>
